2026-01-29  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/devices/grodvi/grodvi.1.man (FT):
	* src/devices/grolj4/grolj4.1.man (FT):
	* src/devices/gropdf/gropdf.1.man (FT):
	* src/devices/grops/grops.1.man (FT): Suppress screeching ("-w
	font") from formatter if a font used for illustrating the
	typeface repertoire is unavailable.  Using a text typeface to
	depict its own name is typographical gravy.

2026-01-29  G. Branden Robinson <g.branden.robinson@gmail.com>

	* font/devpdf/util/BuildFoundries.pl (LoadFoundry): Tweak
	wording of warning diagnostic; favor "cannot" over "unable to"
	or "can't".
	(RunAfmtodit): Clarify warning diagnostic: this script _could_
	pass unrecognized options to afmtodit(1); it _chooses_ not to.
	Also use the word "option" instead of "flag"--not all of
	afmtodit's command-line options are Boolean-valued.

2026-01-29  G. Branden Robinson <g.branden.robinson@gmail.com>

	Propagate "configure" shell variable `urwfontsupport` into
	"BuildFoundries" script, quieting build-time warnings when URW
	font support is explicitly deconfigured.

	* m4/groff.m4 (GROFF_URW_FONTS_SUPPORT): `AC_SUBST`
	`urwfontsupport` so that it is defined in Makefiles.
	* font/devpdf/devpdf.am (BuildFoundries): Add `urwfontsupport`
	to set of sed(1) substitutions performed when generating target.
	* font/devpdf/util/BuildFoundries.pl: Add `urwfontsupport`
	scalar, taking value of corresponding sed substituion.
	(LoadFoundry): Suppress warning about unavailable font if
	`urwfontsupport` matches "no".

2026-01-29  G. Branden Robinson <g.branden.robinson@gmail.com>

	* m4/groff.m4 (GROFF_URW_FONTS_CHECK): Stop emptying shell
	variable `urwfontsdir` if the URW fonts aren't found.  This
	variable _had_ been used both to store the directory where they
	were found _and_ as an indicator of whether URW font support was
	expected by the configuring user.  We now have `urwfontsupport`
	for the latter purpose, and blanking out `urwfontsdir` had the